# Context

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  GEMINI.md  LICENSE  README.md  Taskfile.yml  commitlint.config.js  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
diagram/: archutecture_diagram.mmd  gitingest_diff_sync_workflow.mmd  mcp_detailed_diagram.mmd  orchestrator_detailed_diagram.mmd  rag_detailed_diagram.mmd
docs/: concern_assessment_rationale.md  concerns.md  detailed_design.md  index.md  issues.md  personal_development_strategy.md  phase_design.md  phase_impact_summary.md  project_overview.md
schemas/: helmes_response.schema.json  mcp_server.openapi.yml  plan_v1.schema.json  rag_server.openapi.yml  tool_result.schema.json
scripts/: check_server.sh
src/: cli.py  main.py  orchestrator.py
tests/: test_main.py  test_orchestrator.py
